test_regress/t/t_param_sel_range1_bad.out
%Warning-SELRANGE: t/t_param_sel_range1.v:41:33: Selection index out of range: 7:7 outside 4:0
                                               : ... note: In instance 't.u2'
   41 |           else r_rst[i] <= r_rst[i-1];   
      |                                 ^
                   ... For warning description see https://verilator.org/warn/SELRANGE?v=latest
                   ... Use "/* verilator lint_off SELRANGE */" and lint_on around source to disable this message.
%Error: Exiting due to
